RESOLVED FIXED88733
[BlackBerry] Unexpected repeats of short media
https://bugs.webkit.org/show_bug.cgi?id=88733
Summary [BlackBerry] Unexpected repeats of short media
Max Feil
Reported 2012-06-10 07:04:42 PDT
The m_userDrivenSeekTimer is causing unwanted repeats of short media such as sound effects because it is causing the current time to not reflect that the media has finished playing. This problem only affects media whose duration is close to or less than the SeekSubmissionDelay, which is currently set to 100ms. My fix is to ignore the userDrivenSeekTimer in MediaPlayerPrivate::currentTime() if the duration of the media is within twice the SeekSubmissionDelay. Seek drag smoothness (the original reason for the timer) is a non-issue for such short media. I discovered this problem on the BrickBreakerRevolution game. The sound of the ball hitting the paddle or bricks would repeat. I have written an automated test using a sound effect from the game.
Attachments
Patch (13.75 KB, patch)
2012-06-11 14:13 PDT, Max Feil
no flags
Max Feil
Comment 1 2012-06-11 14:13:40 PDT
WebKit Review Bot
Comment 2 2012-06-11 16:18:32 PDT
Comment on attachment 146906 [details] Patch Clearing flags on attachment: 146906 Committed r120018: <http://trac.webkit.org/changeset/120018>
WebKit Review Bot
Comment 3 2012-06-11 16:18:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.